# lantern

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml  shadow-image.yml
cmake/: Dependencies.cmake
docker/: entrypoint.sh
include/lantern/consensus/: containers.h  duties.h  fork_choice.h  hash.h  runtime.h  shadow_cost.h  signature.h  slot_clock.h  ssz.h  state.h  store.h
include/lantern/core/: client.h
include/lantern/crypto/: xmss.h
include/lantern/encoding/: snappy.h
include/lantern/genesis/: genesis.h
include/lantern/http/: client.h  core.h  metrics.h  server.h
include/lantern/metrics/: lean_metrics.h  server.h
include/lantern/networking/: enr.h  gossip.h  gossip_payloads.h  gossipsub_service.h  libp2p.h  messages.h  reqresp_service.h
include/lantern/storage/: storage.h
include/lantern/support/: log.h  version.h
scripts/: run_devnet2.sh  run_local_devnet.sh
scripts/fixtures/: generate_networking_ssz.py
shadow/: Dockerfile.shadow  README.md
src/consensus/: containers.c  duties.c  fork_choice.c  hash.c  runtime.c  shadow_cost.c  signature.c  slot_clock.c  ssz.c  state.c  store.c
src/core/: client.c  client_debug.c  client_http.c  client_init.c  client_internal.h  client_keys.c  client_network.c  client_network_internal.h  client_peers.c  client_pending.c  client_reqresp.c  client_reqresp_blocks.c  client_reqresp_stream.c  client_services_internal.h  client_sync.c  client_sync_blocks.c  client_sync_internal.h  client_sync_votes.c  client_utils.c  client_validator.c  main.c
src/crypto/: xmss.c
src/encoding/: rlp.c  snappy.c
src/genesis/: genesis.c  genesis_internal.h  genesis_parse.c  genesis_parse_helpers.c  genesis_parse_registry.c  genesis_validator_config.c
src/http/: client.c  common.c  core.c  metrics.c  server.c
src/internal/: yaml_parser.c
src/metrics/: lean_metrics.c  server.c
src/networking/: enr.c  gossip.c  gossip_payloads.c  gossipsub_service.c  libp2p.c  messages.c  reqresp_service.c
src/storage/: storage.c
src/support/: log.c
src/test_driver/: driver.c
tests/fixtures/: ssz_signature_vectors.h  ssz_vectors.h
tests/fixtures/consensus/fork_choice/devnet/fc/test_attestation_processing/: test_attestation_accumulation_full_validator_set.json  test_attestation_superseding_same_validator.json  test_attestations_move_to_known_between_blocks.json  test_extended_chain_attestation_superseding_pattern.json  test_proposer_attestation_appears_in_latest_new.json  test_slot_gaps_with_attestation_superseding.json
tests/fixtures/consensus/fork_choice/devnet/fc/test_attestation_target_selection/: test_attestation_target_advances_with_attestations.json  test_attestation_target_at_genesis_initially.json  test_attestation_target_justifiable_constraint.json  test_attestation_target_with_extended_chain.json  test_attestation_target_with_slot_gaps.json
tests/fixtures/consensus/fork_choice/devnet/fc/test_fork_choice_head/: test_head_advances_through_deep_chain.json  test_head_switches_to_heavier_fork.json  test_head_with_deep_fork_split.json  test_head_with_gaps_in_slots.json  test_head_with_large_gaps.json  test_head_with_two_competing_forks.json
tests/fixtures/consensus/fork_choice/devnet/fc/test_fork_choice_reorgs/: test_back_and_forth_reorg_oscillation.json  test_reorg_on_newly_justified_slot.json  test_reorg_prevention_heavy_fork_resists_light_competition.json  test_reorg_with_slot_gaps.json  test_simple_one_block_reorg.json  test_three_block_deep_reorg.json  test_three_way_fork_competition.json  test_two_block_reorg_progressive_building.json
tests/fixtures/consensus/fork_choice/devnet/fc/test_lexicographic_tiebreaker/: test_equal_weight_forks_use_lexicographic_tiebreaker.json
tests/fixtures/consensus/ssz/devnet/ssz/test_consensus_containers/: test_signed_block_minimal.json
tests/fixtures/consensus/state_transition/devnet/state_transition/test_block_processing/: test_block_at_large_slot_number.json  test_block_extends_deep_chain.json  test_block_with_invalid_parent_root.json  test_block_with_invalid_proposer.json  test_block_with_invalid_state_root.json  test_block_with_wrong_slot.json  test_blocks_with_gaps.json  test_empty_blocks.json  test_empty_blocks_with_missed_slots.json  test_linear_chain_multiple_blocks.json  test_process_first_block_after_genesis.json
tests/fixtures/consensus/state_transition/devnet/state_transition/test_genesis/: test_genesis_custom_time.json  test_genesis_custom_validator_set.json  (+1 more)
tests/fixtures/genesis/: validator-config.yaml
tests/fixtures/genesis/xmss-keys/: validator-keys-manifest.yaml  validator_0_pk.json  validator_1_pk.json  validator_2_pk.json  validator_3_pk.json  validator_5_pk.json  validator_6_pk.json
tests/fixtures/networking/: blocks_by_root_request_leanspec.ssz  blocks_by_root_response_leanspec.ssz  gossip_signed_block_leanspec.snappy  gossip_signed_block_leanspec.ssz  gossip_signed_vote_leanspec.snappy  gossip_signed_vote_leanspec.ssz  status_leanspec.snappy
tests/integration/: consensus_fixture_runner.c  test_consensus_vectors.c  test_genesis_vectors.c  test_networking_codec_vectors.c  test_ssz_vectors.c  test_validator_duties.c  test_verify_signatures_vectors.c
tests/support/: fixture_loader.c  state_store_adapter.c  state_store_adapter.h
tests/unit/: client_test_helpers.c  client_test_helpers.h  test_checkpoint_sync_api.c  test_client_gossip.c  test_client_pending.c  test_client_state_staleness.c  test_client_vote.c  test_consensus_runtime.c  test_duties.c  test_fixture_loader.c  test_fork_choice.c  test_genesis_anchor.c  test_genesis_bootstrap.c  test_gossip_block_dump_decode.c  test_libp2p.c  test_metrics.c  test_networking_messages.c  test_off_head_replay.c  test_reqresp_service.c  test_signature.c  test_slot_clock.c  test_ssz.c  test_state.c  test_storage.c  test_validator_selection.c
tools/debug/: generate_gossip_snappy.c  inspect_genesis.c  regenerate_networking_fixtures.c
tools/fixtures/: fill_consensus_fixtures.sh  fill_genesis_fixtures.sh  generate_networking_ssz.py
(+3 files in other folders)
